docs: r16.6 — fix Fig 27.2 connector; expand Ch20 (JVM/GC observability diagram, collectors, multi-container, perf monitoring)